# c-machine-learning-framework

./: CMakeLists.txt  LICENSE  README.md
core/: dataset.c  ml.c  ml.h
cpp-package/: CMakeLists.txt  Dataset.cpp  LinearModel.cpp  Model.cpp  ml.hpp
ml/: CMakeLists.txt  dataset.c  linear.c  ml.c  ml.h
src/: CMakeLists.txt  linear.c  math_kernels.c  math_kernels.h  ml.h
tests/: CMakeLists.txt  dataset.c  linear.c  linear.cpp  mse.c  omp.c  train.c  train.cpp
tests/c/: CMakeLists.txt  dataset.c  linear.c  logistic.c  model.c  mse.c  omp.c  train.c
tests/cpp/: dataset.cpp
